refactor: add keywords and description

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="./src/assets/heartred.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="免費開團揪旅伴，快速找到志同道合的夥伴，一起探索新旅程！打造一個隨揪隨行的平台，輕鬆共享美好時光。"
+    />
+    <meta
+      name="keywords"
+      content="交友, 卡拉OK, 工程師, 吃飯, 美食, friends, 揪團, 休閒, 社群, 旅遊, 免費"
+    />
     <title>Joitogether</title>
   </head>
   <body>
